--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ html {
 body {
 	  background: url("../images/bg1_grey.jpg") no-repeat center center;
   background-size: cover;
+
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -124,11 +125,11 @@ img {
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
-  background: $lightGray;
+  //background: $lightGray;
 }
 ::selection {
   color: $black;
-  background: $lightGray;
+  //background: $lightGray;
 }
 
 // Nicolas Gallagher's micro clearfix hack
@@ -158,7 +159,6 @@ img {
 .masthead {
   padding: 20px 0;
   border-bottom: 1px solid $lightGray;
-
   @include mobile {
     text-align: center;
   }
@@ -276,7 +276,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  //background-color: $lightGray;
 }
 
 footer {
