--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	  background: url("../images/bg1_grey.jpg") no-repeat center center;
+	  background: url("../images/bg1_grey_cropped.jpg") no-repeat center top bottom;
   background-size: cover;
 
   font: 18px/1.4 $helvetica;
