--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,10 @@
 
 // Colors
 $blue: #4183C4;
+$headerColor: #4f544d;
+$mainColor: #e2e2e2;
+$textLight: #e2e2e2;
+$textDark: #4f544d;
 
 // Grays
 $black: #000;
