--- a/style.scss
+++ b/style.scss
@@ -9,252 +9,131 @@
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
-/**************/
-/* BASE RULES */
-/**************/
+///
+/// HEADER
+///
 
-html {
-  font-size: 100%;
-}
+.header_layout {
+  background-color: $headerColor;
 
-body {
-  background-image: url("../images/bg1_grey_cropped.jpg");
-  //background-position-x: initial;
-    //background-position-y: initial;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: initial;
-    //background-origin: initial;
-    background-clip: initial;
-    background-color: transparent;
-
-    position: bottom
-
-  
-	font: 18px/1.4 $helvetica;
-  color: $darkGray;
-}
-
-.container {
-  padding: 0 10px;
-  width: 100%;
-}
-
-.container_headerfooter {
-  margin: 0 auto;
-  max-width: 740px;
-}
-
-.container_main {
-
-  margin: 0 200px;
-  max-width: 650px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
-  font-weight: bold;
-
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
-
-  @include mobile {
-    line-height: 1.4;
-  }
-}
-
-h1 {
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
-}
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 20px;
-}
-
-h4 {
-  font-size: 18px;
-  color: $gray;
-}
-
-p {
-  margin: 15px 0;
-}
-
-a {
-  color: $blue;
-  text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
-}
-
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
-}
-
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
-
-ul ul, ol ul {
-  list-style-type: circle;
-}
-
-em, i {
+  font-family: Calibri;
   font-style: italic;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 26.4px; 
+
+  padding: 30px 0;
+  cursor: pointer;
 }
 
-strong, b {
-  font-weight: bold;
-}
-
-img {
-  max-width: 100%;
-}
-
-// Fixes images in popup boxes from Google Translate
-.gmnoprint img {
-  max-width: none;
-}
-
-.date {
-  font-style: italic;
-  color: $gray;
-}
-
-// Specify the color of the selection
-::-moz-selection {
-  color: $black;
-}
-::selection {
-  color: $black;
-}
-
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*********************/
-/* LAYOUT / SECTIONS */
-/*********************/
-
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  background-color: #3F085E;
-}
-
-.masthead {
-  padding: 20px 0;
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-   // border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+.header_text_layout {
+  height: 100%;
+  margin: 0 22%;
+  color: $textLight;
 }
 
 .site-name {
-  margin: 0;
-  color: $white;
+  float: left;
+  text-decoration: none;
+  font-size: 30px;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
+  &:visited {
+    color: $textLight;
   }
+  &:hover, &:active {
+    color: $white;
+  } 
 }
 
-nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
+.navigation {
+  font-size: 20px;
+  color: $textLight;
+  margin: 0px 35%; 
+}
 
-  @include mobile {
-    float: none;
-    margin-top: 9px;
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: $headerColor;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
-    font-size: 16px;
-  }
-
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
-
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
-  }
 }
 
-//
-// .main
-//
+.dropdown-content a:hover {
+background-color: #f1f1f1;
+}
 
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+///
+/// MAIN
+///
+
+.main_layout {
+   background-image: url("../assets/background_image.jpg");
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-attachment: initial;
+   background-clip: initial;
+   background-position: center;
+
+  font-family: Calibri;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 26.4px; 
+
+  height: -webkit-fill-available
+}
+
+.main_page_layout {
+  position: absolute;
+  top: 150px;
+  bottom: 0px;
+  background-color: $mainColor;
+
+  padding: 3% 3%;
+  width: 50%;
+
+  margin: 0 19%;
+  max-width: 100%;
+
+  color: $textDark;
+}
+
+.page_header {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 5px 0;
+}
+
+.post_header {
+  font-size: 30px;
+  font-weight: bold;
+
+    &:visited {
+    color: $textDark;
+  }
+  &:hover, &:active {
+    color: $white;
+  } 
+}
 
 .posts > .post {
   padding-bottom: 2em;
@@ -283,19 +162,11 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
+
+    &:visited {
+
+    }
   }
-}
-
-.wrapper-footer {
-
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
-
-footer {
-  padding: 20px 0;
-  text-align: center;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
