mostly working version
lostly first working version

--- a/_layouts/my_default.html
+++ b/_layouts/my_default.html
@@ -33,11 +33,10 @@
           </div>
 
           <div class="dropdown">
-            <span>About me</span>
+            <span>About</span>
             <div class="dropdown-content">
-              <a href="#">About me</a>
+              <a href="#">Who am I?</a>
               <a href="#">CV</a>
-              <a href="#">Cosplay</a>
             </div>
           </div>
 
