--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,9 @@
 ///
 
 .header_layout {
+  overflow: hidden;
+  width: 100%;
+
   background-color: $headerColor;
 
   font-family: Calibri;
@@ -52,6 +55,7 @@
 }
 
 .dropdown {
+    padding: 0px 10px;
     position: relative;
     display: inline-block;
 }
@@ -61,9 +65,9 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
+    //0px rgba(0,0,0,0.2);
+    //padding: 5px 8px;
+    z-index: 99;
 }
 
 .dropdown-content a {
@@ -86,6 +90,10 @@ background-color: #f1f1f1;
 ///
 
 .main_layout {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+
    background-image: url("../assets/background_image.jpg");
    background-size: cover;
    background-repeat: no-repeat;
@@ -93,20 +101,24 @@ background-color: #f1f1f1;
    background-clip: initial;
    background-position: center;
 
+   height: -webkit-fill-available;
+
   font-family: Calibri;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
   line-height: 26.4px; 
 
-  height: -webkit-fill-available
+  
 }
 
 .main_page_layout {
+  overflow: auto;
   position: absolute;
-  top: 150px;
+  top: 100px;
   bottom: 0px;
   background-color: $mainColor;
+
 
   padding: 3% 3%;
   width: 50%;
@@ -125,7 +137,7 @@ background-color: #f1f1f1;
 
 .post_header {
   font-size: 30px;
-  font-weight: bold;
+  color: $textDark;
 
     &:visited {
     color: $textDark;
@@ -136,8 +148,9 @@ background-color: #f1f1f1;
 }
 
 .posts > .post {
+  padding-top: 2em;
   padding-bottom: 2em;
-  //border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid $white;
 }
 
 .posts > .post:last-child {
@@ -163,11 +176,12 @@ background-color: #f1f1f1;
     text-transform: uppercase;
     font-size: 15px;
 
-    &:visited {
-
+    &:hover {
+      color: $white;
     }
   }
 }
+
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
