--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,8 @@
   height: 100%;
   margin: 0 22%;
   color: $textLight;
+
+  z-index: 99;
 }
 
 .site-name {
@@ -108,7 +110,6 @@ background-color: #f1f1f1;
   font-variant: normal;
   font-weight: 400;
   line-height: 26.4px; 
-
   
 }
 
@@ -116,7 +117,7 @@ background-color: #f1f1f1;
   overflow: auto;
   position: absolute;
   top: 100px;
-  bottom: 0px;
+  bottom: 60px;
   background-color: $mainColor;
 
 
@@ -161,11 +162,8 @@ background-color: #f1f1f1;
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
     padding: 0.1em 1em;
-    color: $gray;
     font-size: 22px;
-    font-style: italic;
   }
 
   .comments {
@@ -180,6 +178,13 @@ background-color: #f1f1f1;
       color: $white;
     }
   }
+}
+
+.date {
+  padding: 10px 0px;
+  font-style: italic;
+  font-size: 14px;
+  color: $gray;
 }
 
 
