--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,6 @@
 ///
 
 .header_layout {
-  overflow: hidden;
   width: 100%;
 
   background-color: $headerColor;
@@ -80,7 +79,8 @@
 }
 
 .dropdown-content a:hover {
-background-color: #f1f1f1;
+background-color: $gray;
+color: $white;
 }
 
 .dropdown:hover .dropdown-content {
