--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,8 @@
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
+img[alt=screenshot] { width: 100%; }
+
 ///
 /// HEADER
 ///
