--- a/_layouts/my_default.html
+++ b/_layouts/my_default.html
@@ -5,6 +5,7 @@
 
     {% include meta.html %}
 
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
@@ -24,8 +25,8 @@
           <div class="dropdown">
             <span>Projects</span>
             <div class="dropdown-content">
-              <a href="#">UI kit</a>
-              <a href="#">Soundscape</a>
+              <a href="{% post_url 2017-11-10-UI-kit %}">UI kit</a>
+              <a href="{% post_url 2017-11-10-Soundscape%}">Soundscape</a>
               <a href="#">Lifehack video</a>
               <a href="#">3D model</a>
               <a href="#">Interactivity</a>
@@ -35,7 +36,7 @@
           <div class="dropdown">
             <span>About</span>
             <div class="dropdown-content">
-              <a href="#">Who am I?</a>
+              <a href="{{ site.baseurl }}/about">Who am I?</a>
               <a href="#">CV</a>
             </div>
           </div>
