--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,54 @@
 
 img[alt=screenshot] { width: 100%; }
 
+// source: https://gist.github.com/roachhd/779fa77e9b90fe945b0c
+
+h2, h3, h4, h5, h6 {
+  font-weight: bold;
+
+  line-height: 1.7;
+  margin: 1em 0 15px;
+  padding: 0;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 18px;
+  color: $gray;
+}
+
+strong, b {
+  font-weight: bold;
+}
+
+ul, ol {
+  margin: 15px 0;
+  padding-left: 30px;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+ol ul, ul ol, ul ul, ol ol {
+  margin: 0;
+}
+
+ul ul, ol ul {
+  list-style-type: circle;
+}
+
 ///
 /// HEADER
 ///
