--- a/_layouts/my_default.html
+++ b/_layouts/my_default.html
@@ -27,9 +27,9 @@
             <div class="dropdown-content">
               <a href="{% post_url 2017-11-10-UI-kit %}">UI kit</a>
               <a href="{% post_url 2017-11-10-Soundscape%}">Soundscape</a>
-              <a href="#">Lifehack video</a>
+              <a href="{% post_url 2017-11-12-lifehack-video%}">Lifehack video</a>
               <a href="{% post_url 2017-11-10-3D-model%}">3D model</a>
-              <a href="#">Interactivity</a>
+              <a href="{% post_url 2017-11-12-interactive-assignment%}">Interactivity</a>
             </div>
           </div>
 
