--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
 // Syntax highlighting @import is at the bottom of this file
 
 img[alt=screenshot] { width: 100%; }
+video { width: 100% }
 
 h2, h3, h4, h5, h6 {
   font-weight: bold;
